--- a/package.json
+++ b/package.json
@@ -1,15 +1,27 @@
 {
   "name": "face-me",
   "private": true,
+  "type": "module",
   "scripts": {
     "build": "turbo build",
     "dev": "turbo dev",
     "lint": "turbo lint",
-    "format": "prettier --write \"**/*.{ts,tsx,md}\""
+    "format": "prettier --write \"**/*.{ts,tsx,md}\"",
+    "sst:dev": "sst dev",
+    "sst:build": "sst build",
+    "sst:deploy": "sst deploy",
+    "sst:remove": "sst remove",
+    "sst:console": "sst console",
+    "typecheck": "tsc --noEmit"
   },
   "devDependencies": {
     "prettier": "^3.1.1",
-    "turbo": "latest"
+    "turbo": "latest",
+    "sst": "^2.40.6",
+    "aws-cdk-lib": "2.124.0",
+    "constructs": "10.3.0",
+    "typescript": "^5.3.3",
+    "@tsconfig/node18": "^18.2.2"
   },
   "packageManager": "pnpm@8.9.0",
   "engines": {
