--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -13,7 +13,8 @@
     "@solid-primitives/keyboard": "^1.2.7",
     "peerjs": "^1.5.2",
     "solid-js": "^1.8.15",
-    "solid-toast": "^0.5.0"
+    "solid-toast": "^0.5.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.17",
