--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -12,6 +12,7 @@
     "@solid-primitives/audio": "^1.3.16",
     "@solid-primitives/keyboard": "^1.2.7",
     "peerjs": "^1.5.2",
+    "solid-icons": "^1.1.0",
     "solid-js": "^1.8.15",
     "solid-toast": "^0.5.0",
     "zod": "^3.22.4"
