--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -18,6 +18,8 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.7",
+    "tailwind-scrollbar": "^3.1.0",
     "autoprefixer": "^10.4.17",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
