--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -7,11 +7,16 @@
     "typecheck": "tsc -noEmit"
   },
   "devDependencies": {
-    "vitest": "^1.3.1",
+    "@aws-sdk/client-dynamodb": "^3.529.1",
+    "@aws-sdk/client-sqs": "^3.529.1",
     "@types/node": "^20.11.24",
-    "sst": "^2.40.6"
+    "sst": "^2.40.6",
+    "vitest": "^1.3.1"
   },
   "dependencies": {
+    "@aws-sdk/client-apigatewaymanagementapi": "^3.529.1",
+    "@aws-sdk/lib-dynamodb": "^3.529.1",
+    "electrodb": "^2.13.1",
     "zod": "^3.22.4"
   }
 }
