--- a/packages/functions/package.json
+++ b/packages/functions/package.json
@@ -7,9 +7,13 @@
     "typecheck": "tsc -noEmit"
   },
   "devDependencies": {
-    "@types/node": "^20.11.24",
     "@types/aws-lambda": "^8.10.134",
-    "vitest": "^1.3.1",
-    "sst": "^2.40.6"
+    "@types/node": "^20.11.24",
+    "sst": "^2.40.6",
+    "vitest": "^1.3.1"
+  },
+  "dependencies": {
+    "zod": "^3.22.4",
+    "zod_utilz": "^0.8.2"
   }
 }
