--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@solid-primitives/audio": "^1.3.16",
     "@solid-primitives/keyboard": "^1.2.7",
+    "@solid-primitives/websocket": "^1.2.2",
+    "socket.io-client": "^4.4.1",
     "peerjs": "^1.5.2",
     "solid-icons": "^1.1.0",
     "solid-js": "^1.8.15",
@@ -19,10 +21,10 @@
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.7",
-    "tailwind-scrollbar": "^3.1.0",
     "autoprefixer": "^10.4.17",
     "postcss": "^8.4.35",
-    "tailwindcss": "^3.4.1",
+    "tailwind-scrollbar": "^3.1.0",
+    "tailwindcss": "^3.4.1",    
     "typescript": "^5.2.2",
     "vite": "^5.1.4",
     "vite-plugin-solid": "^2.10.1"
