--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -17,6 +17,7 @@
     "@aws-sdk/client-apigatewaymanagementapi": "^3.529.1",
     "@aws-sdk/lib-dynamodb": "^3.529.1",
     "electrodb": "^2.13.1",
+    "p-retry": "^6.2.0",
     "zod": "^3.22.4"
   }
 }
