--- a/packages/functions/package.json
+++ b/packages/functions/package.json
@@ -13,6 +13,7 @@
     "vitest": "^1.3.1"
   },
   "dependencies": {
+    "p-retry": "^6.2.0",
     "zod": "^3.22.4",
     "zod_utilz": "^0.8.2"
   }
